--- a/src/containers/containers.scss
+++ b/src/containers/containers.scss
@@ -1,5 +1,5 @@
 .controls {
-    visibility: hidden;
+    // visibility: hidden;
     opacity: 0.5;
     width: 400px;
     border-radius: 10px;
@@ -11,11 +11,17 @@
     box-shadow: 3px 3px 5px black;
     transition: 1s all;
     display: flex;
+
+    :hover {
+        visibility: visible;
+        opacity: 1;
+    }
 }
 
 .player {
-    width: auto;
-    height: auto;
+    width: 100%;
+    display: flex;
+    margin: 3% 0% 3% 0%;
 
     :hover {
         opacity: 1;
@@ -24,4 +30,8 @@
     :focus {
         opacity: 1;
     }
+}
+
+.social {
+    position: absolute;
 }
