--- a/src/components/Views/Views.scss
+++ b/src/components/Views/Views.scss
@@ -1,15 +1,11 @@
 .eye {
     margin: 10px;
     width: 25px;
-    transition: 0.6s all;
     height: auto;
     background-color: transparent;
     border: none;
     box-shadow: none;
-
-    &:hover {
-        opacity: 1;
-    }
+    z-index: 1;
 }
 
 .views {
