--- a/src/components/Votes/Votes.scss
+++ b/src/components/Votes/Votes.scss
@@ -1,4 +1,11 @@
 .votes {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     float: right;
+}
+
+.counter {
+    font-size: 14px;
+    color: white;
 }
