--- a/src/components/Timeline/Timeline.scss
+++ b/src/components/Timeline/Timeline.scss
@@ -1,36 +1,26 @@
-.timeline {
-    height: 55px;
-    width: 100%;
-    line-height: 38px;
-    font-size: 10px;
-    font-family: monospace;
-    text-shadow: 1px 1px 0px white;
-    color: white;
-    flex: 5;
-    position: relative;
-}
-
-.progress {
-    position: absolute;
-    background-color: white;
-    left: 0;
-    top: 0;
-    width: 0;
-    height: 55px;
-    z-index: 2;
-}
-
 .currentTime {
     position: absolute;
     z-index: 3;
     left: 19px;
     color: black;
 }
-button,
-.timeline {
-    cursor: pointer;
-    line-height: 20px;
+
+.progress-bar {
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 100px;
+    align-items: center;
     align-self: center;
-    height: 55px;
-    box-shadow: inset 0 -3px 8px white;
+    position: relative;
+    padding: 0 5px;
+    display: flex;
+    height: 30px;
+    width: 100%;
+}
+
+.progress-bar-inner {
+    box-shadow: 0 10px 40px -10px #fff;
+    border-radius: 100px;
+    background: #fff;
+    height: 30px;
+    width: 0;
 }
